@@ -1,7 +1,6 @@
 Muine is a new music player using some new UI ideas. The idea is that it will
 be much easier and comfortable to use than the iTunes model, which is used by
-both Rhythmbox and Jamboree. It is written in C and C#, using GStreamer for
-music playback.
+both Rhythmbox and Jamboree. 
 
 Our website is here:
 
@@ -20,9 +19,15 @@ Requirements
 
 Mono >= 0.30.1
 Gtk# >= 0.17
-GStreamer 0.6 >= 0.6.3 with the following elements:
-   mad, flacdec, vorbisfile, volume, and an audiosink
 libid3tag >= 0.15.0b
 vorbis >= 1.0
 FLAC >= 1.1.0
 gdbm
+
+And for playback either:
+
+  GStreamer 0.8
+
+or (recommended for the time being):
+
+  Xine (libxine) >= 1.0.0
